--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
 .App {
   text-align: center;
+  background: white;
 }
 
 .App-logo {
@@ -7,9 +8,8 @@
 }
 
 .App-header {
-  background-color: white;
-  height: 150px;
-  padding: 20px;
+  height: 120px;
+  padding: 20px 0px 0px 0px;
   color: black;
 }
 
@@ -18,5 +18,6 @@
 }
 
 .App-intro {
-  font-size: large;
+    font-size: small;
+    color: black;
 }
